--- a/style.css
+++ b/style.css
@@ -71,24 +71,37 @@ header .rabbit {
     text-decoration: none;
 }
 
+.semi-footer {
+    width: 100%;
+    margin: auto;
+    background-color: rgb(240, 204, 1);
+    text-align: center;
+    font-family: "Kirang Haerang";
+    font-size: 24px;
+}
 
 .slide {
+    width: 100%;
     height: 500px;
-    background-color: rgb(0, 0, 0);
+    background-image: url(/assets/svg/COELHO\ NEW\ JEANS\ SPORT.svg);
+    background-size: 485px;
+    background-color: #000;
+    background-repeat: no-repeat;
+    background-position: 118% 10%;
     justify-content: center;
+    display: flex;
 }
 
 .carousel-item img {
     height: 500px;
     margin: auto;
     object-fit: cover;
-    width: 100%;
 }
 
 .titleprod {
     width: 300px;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 30px;
     background-color: rgb(194, 11, 11);
     text-align: center;
     font-family: "Kirang Haerang" !important;   
@@ -130,4 +143,16 @@ header .rabbit {
 
 .card-body {
     background-color: rgb(216, 10, 10);
+}
+
+.card .btn {
+    background-color: rgb(240, 204, 1);
+    border: none;
+    color: #000;
+    width: 80%;
+}
+
+.card .btn:hover {
+    background-color: rgb(240, 204, 1);
+    color: rgb(216, 10, 10);
 }
